adding screenshots of nyc open data links for audience

--- a/nyc-art-galleries.ipynb
+++ b/nyc-art-galleries.ipynb
@@ -49,6 +49,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# New York City Art Galleries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![nyc-art-galleries](nyc-art-galleries.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 108,
    "metadata": {},
@@ -265,6 +279,20 @@
     "\n",
     "# Insert comment here\n",
     "plt.axis('off')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Neighborhood Tabulation Areas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![nyc-nta-neighborhoods](nyc-nta-neighborhoods.png)"
    ]
   },
   {
