adding image to explain conversion to acres

--- a/nyc-art-galleries.ipynb
+++ b/nyc-art-galleries.ipynb
@@ -538,6 +538,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Converting Shape Area to Acres"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using Yorkville as reference"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"acres-conversion.png\" alt=\"conversion\"\n",
+    "\ttitle=\"conversion\" width=\"400\" height=\"100\" />"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 122,
    "metadata": {},
