image explaining conversion to acres

--- a/nyc-art-galleries.ipynb
+++ b/nyc-art-galleries.ipynb
@@ -854,27 +854,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ntaname</th>\n",
+       "      <th>shape_area</th>\n",
+       "      <th>area (acres)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Manhattanville</td>\n",
+       "      <td>10647077.61220</td>\n",
+       "      <td>246.56769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>Clinton</td>\n",
+       "      <td>18362149.83110</td>\n",
+       "      <td>425.23526</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84</th>\n",
+       "      <td>Chinatown</td>\n",
+       "      <td>14501867.88280</td>\n",
+       "      <td>335.83789</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
+       "      <td>Battery Park City-Lower Manhattan</td>\n",
+       "      <td>19014299.21810</td>\n",
+       "      <td>440.33790</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88</th>\n",
+       "      <td>Lincoln Square</td>\n",
+       "      <td>15805586.59240</td>\n",
+       "      <td>366.02973</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "4    246.56769\n",
-       "50   425.23526\n",
-       "84   335.83789\n",
-       "86   440.33790\n",
-       "88   366.02973\n",
-       "Name: area (acres), dtype: float64"
+       "                              ntaname     shape_area  area (acres)\n",
+       "4                      Manhattanville 10647077.61220     246.56769\n",
+       "50                            Clinton 18362149.83110     425.23526\n",
+       "84                          Chinatown 14501867.88280     335.83789\n",
+       "86  Battery Park City-Lower Manhattan 19014299.21810     440.33790\n",
+       "88                     Lincoln Square 15805586.59240     366.02973"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nta_mn['area (acres)'].head()"
+    "nta_mn[['ntaname', 'shape_area', 'area (acres)']].head()"
    ]
   },
   {
