adding data website link for audience

--- a/nyc-art-galleries.ipynb
+++ b/nyc-art-galleries.ipynb
@@ -59,6 +59,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Website Link: https://data.cityofnewyork.us/Recreation/New-York-City-Art-Galleries/tgyc-r5jh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "![nyc-art-galleries](nyc-art-galleries.png)"
    ]
   },
@@ -286,6 +293,13 @@
    "metadata": {},
    "source": [
     "# Neighborhood Tabulation Areas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Website Link: https://data.cityofnewyork.us/City-Government/Neighborhood-Tabulation-Areas/cpf4-rkhq"
    ]
   },
   {
