providing raw data as csv

--- a/nyc-art-galleries.ipynb
+++ b/nyc-art-galleries.ipynb
@@ -224,6 +224,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#saving raw data\n",
+    "nyc_art_galleries.to_csv('nyc-art-galleries.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
