--- a/nyc-art-galleries.ipynb
+++ b/nyc-art-galleries.ipynb
@@ -66,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![nyc-art-galleries](nyc-art-galleries.png)"
+    "![nyc-art-galleries](images/nyc-art-galleries.png)"
    ]
   },
   {
@@ -316,7 +316,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![nyc-nta-neighborhoods](nyc-nta-neighborhoods.png)"
+    "![nyc-nta-neighborhoods](images/nyc-nta-neighborhoods.png)"
    ]
   },
   {
